# seedbank

./: .copier-answers.yml  .editorconfig  .gitignore  .header.yaml  CITATION.cff  LICENSE.md  README.md  justfile  pyproject.toml
.github/workflows/: check-sources.yml  test.yml
docs/: api.rst  conf.py  extending.rst  index.rst  patterns.rst
docs/_templates/: base.html  footer.html
seedbank/: __init__.py  _config.py  _keys.py  _state.py  cupy.py  jax.py  numba.py  numpy.py  stdlib.py  tensorflow.py  torch.py
tests/: init_seed.json  init_seed.toml  init_seed.yaml  test_cupy_generator.py  test_derive.py  test_generator.py  test_init.py  test_init_file.py  test_jax.py  test_numba.py  test_process_seed.py  test_randomstate.py  test_stdlib.py
