[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seedbank"
authors = [
  {name="Michael Ekstrand", email="mdekstrand@drexel.edu"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.7"
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
  "numpy >=1.17",
  "anyconfig ==0.13.*",
]

[project.optional-dependencies]
dev = [
  "flit >=3.2",
  "ruff",
  "copier",
  "ipython",
  "sphinx-autobuild",
]
test = [
  "pytest >= 6",
  "pytest-doctestplus",
  "pytest-cov",
  "pyyaml",
  "toml",
  # "hypothesis",
]
doc = [
  "sphinx >=4",
  "sphinxext-opengraph >= 0.5",
  "furo",
]
numba = ["numba"]
torch = ["torch"]
cupy = ["cupy"]
cuda11x = ["cupy-cuda11x"]
tf = ["tensorflow >=2,<3"]

[project.urls]
Homepage = "https://seedbank.lenksit.org"
GitHub = "https://github.com/lenskit/seedbank"

[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.ruff]
line-length = 100
target-version = "py37"
exclude = [
  ".git",
  "__pycache__",
  "docs/conf.py",
  "build",
  "dist",
]
