[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "seedbank"
description = "Common infrastructure for seeding random number generators."
authors = [
  { name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "numpy >=1.17",
  "anyconfig ==0.13.*",
]

[project.optional-dependencies]
dev = [
  "setuptools>=64",
  "setuptools_scm>=8",
  "build",
  "twine",
  "ruff",
  "pyright",
  "copier",
  "ipython",
  "pyproject2conda",
  "sphinx-autobuild",
]
test = [
  "pytest >= 7",
  "pytest-doctestplus",
  "pytest-cov",
  "pyyaml",
  "toml",
  # "hypothesis",
]
doc = [
  "sphinx >=4.2",
  "sphinxext-opengraph >= 0.5",
  "furo",
]
numba = ["numba"]
torch = ["torch"]
cupy = ["cupy"]
cuda11x = ["cupy-cuda11x"]
tf = ["tensorflow >=2,<3"]

[project.urls]
Homepage = "https://seedbank.lenksit.org"
GitHub = "https://github.com/lenskit/seedbank"

# configure build tools
[tool.setuptools]
packages = ["seedbank"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

# settings for generating conda environments for dev & CI, when needed
[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
exclude = [
  ".git",
  "__pycache__",
  "docs/conf.py",
  "build",
  "dist",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "testing",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
testing = ["pytest", "hypothesis"]

[tool.mypy]
exclude = "^docs/"

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "docs/*",
]
reportMissingImports = true
reportMissingTypeStubs = false
